Fixed welcome heading overflow.

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -29,4 +29,7 @@ $secondary-blue: #076592;
   .hideOnSmall {
     display: none;
   }
+  #welcomeHeading {
+    font-size: 4rem;
+  }
 }
